/*
 * Copyright 2019 Scott Logic Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
    id "java"
}

group "com.scottlogic.datahelix.generator"

sourceCompatibility = 21

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.apache.commons:commons-lang3:${COMMONS_LANG3_VERSION}"
    implementation "com.fasterxml.jackson.core:jackson-core:${JACKSON_VERSION}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${JACKSON_VERSION}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${JACKSON_VERSION}"
    implementation group: "com.google.inject", name: "guice", version: "${GUICE_VERSION}"

    constraints {
        implementation('com.google.guava:guava:30.0-jre') {
            because 'Versions prior to 30.0 are impacted by CVE-2020-8908'
        }
        implementation('com.google.guava:guava:30.0-android') {
            because 'Versions prior to 30.0 are impacted by CVE-2020-8908'
        }
    }

    implementation "org.threeten:threeten-extra:${THREE_TEN_VERSION}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${JUNIT_JUPITER_VERSION}"
    testImplementation "junit:junit:${JUNIT_4_VERSION}"
    testImplementation "org.junit.platform:junit-platform-runner:${JUNIT_PLATFORM_RUNNER_VERSION}"
    testImplementation "org.junit.vintage:junit-vintage-engine:${JUNIT_JUPITER_VERSION}"
    testImplementation "org.hamcrest:java-hamcrest:${HAMCREST_VERSION}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${JUNIT_JUPITER_VERSION}"
    testImplementation "org.mockito:mockito-all:${MOCKITO_VERSION}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${JUNIT_JUPITER_VERSION}"
    testImplementation("org.junit.jupiter:junit-jupiter:${JUNIT_JUPITER_VERSION}")
}

test {
    useJUnitPlatform()
}